--- a/LIL.HTML
+++ b/LIL.HTML
@@ -6,13 +6,13 @@
         </title>
        <style>
         body{
-            background-image: url(download\ \(1\).jpeg);
-            background-repeat:no-repeat ;
+            background:linear-gradient(to right, pink,hotpink,skyblue,lightblue,cadetblue) ;
+        
         }
        </style>
     </head>
     <body>
-        <h1>Background effect in html using css</center</h1>
+        <h1>LInear Gradient and radial</center</h1>
         <p>Example content</p>
     </body>
 </html>
